# kelleyproject

./: .env.example  .gitignore  .mcp.json  README.md  index.html  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/actions/: submit-deal-check.ts
app/console/: actions.ts  page.tsx
app/deal-check/: page.tsx
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
database/: README.md  schema.sql
database/seed/: age_bands.csv  coverage_tiers.csv  mileage_bands.csv  pricing_observations.csv  providers.csv  submissions.csv  vehicle_risk_scores.csv  vehicles.csv
docs/: SUPABASE.md
lib/: format.ts  packages.ts
lib/supabase/: client.ts  server.ts
prototype/: index.html
research/: 00-executive-summary.md  01-market-overview.md  02-provider-comparison.md  03-pricing-factor-matrix.md  04-dealer-markup-analysis.md  05-coverage-tiers.md  06-research-workflow.md  07-business-use-case.md  compliance.md  market-pricing.md  sources.md
scoring/: risk-scoring-model.md
scripts/: export_ts_data.py
src/: App.jsx  index.css  theme.js
src/buyer/: Account.jsx  BuyerApp.jsx  CreditDashboard.jsx  Home.jsx  Messages.jsx  Onboarding.jsx  Plan.jsx  Upload.jsx
src/components/: AppHeader.jsx  Icon.jsx  Phone.jsx  Ring.jsx  StatusBar.jsx  TabBar.jsx
src/console/: ConsoleApp.jsx  Detail.jsx  Metrics.jsx  ReplyComposer.jsx  (+3 more)
supabase/: README.md  schema.sql
templates/: quote-collection-template.csv  quote-collection-template.md  submission-intake-template.csv  submission-intake-template.md
tests/: conftest.py  test_api.py  test_cli.py  test_data_integrity.py  test_db.py  test_ingest.py  test_pricing.py  test_scoring.py
(+28 files in other folders)
