[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drivewayadvocate"
version = "0.1.0"
description = "Vehicle service contract (VSC) pricing intelligence — the 'KBB for service contracts'."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Driveway Advocate" }]
keywords = ["vehicle-service-contract", "extended-warranty", "automotive", "pricing"]
dependencies = []  # standard library only

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
drivewayadvocate = "drivewayadvocate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
